--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h3>chat yapmaya başlamak için giriş yap!</h3>
-        <form action="login" method="post">
+        <form action="login" method="post" autocomplete="off">
             <input type="text" name="kullaniciAdi" id="kullaniciAdi" placeholder="lütfen bir kullanıcı adı seçin.">
             <select name="odaNumarasi">
                 <option>Lütfen katılmak üzere bir oda seçin</option>
