--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,11 +7,11 @@
         <h3>chat yapmaya başlamak için giriş yap!</h3>
         <form action="login" method="post" autocomplete="off">
             <input type="text" name="kullaniciAdi" id="kullaniciAdi" placeholder="lütfen bir kullanıcı adı seçin.">
-            <select name="odaNumarasi">
+            <select name="oda">
                 <option>Lütfen katılmak üzere bir oda seçin</option>
-                <option value="">oda 1</option>
-                <option value="">oda 2</option>
-                <option value="">oda 3</option>
+                <option value="oda1">oda 1</option>
+                <option value="oda2">oda 2</option>
+                <option value="oda3">oda 3</option>
             </select>
             <input type="submit" id="joinChatButton" value="Sohbete katıl!">
         </form>
