--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+        <meta charset="utf-8">
         <title> <%= title %> </title>
     </head>
     <body>
@@ -8,7 +10,7 @@
         <form action="login" method="post" autocomplete="off">
             <input type="text" name="kullaniciAdi" id="kullaniciAdi" placeholder="lütfen bir kullanıcı adı seçin.">
             <select name="oda">
-                <option>Lütfen katılmak üzere bir oda seçin</option>
+                <option value="">Lütfen katılmak üzere bir oda seçin</option>
                 <option value="oda1">oda 1</option>
                 <option value="oda2">oda 2</option>
                 <option value="oda3">oda 3</option>
