--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <!--<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />-->
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
         <meta charset="utf-8">
         <title><%= data.title %></title>
         <link rel="stylesheet" href="custom.css">
@@ -21,11 +21,11 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-3 col-sm-3 col-md-3 col-lg-3" style="background-color: #5a32cf;"> <!-- inline css -->
+                <div class="col-12 col-sm-12 col-md-3 col-lg-3" style="background-color: #5a32cf;"> <!-- inline css -->
                     <span id="katilimciKullaniciAdi">siz : <%= data.user %></span>
                     <span>oda : <%= data.room %> </span>
                 </div>
-                <div class="col-9 col-sm-9 col-md-9 col-lg-9 icerigi-yatay-dikey-ortala" style="background-color: #2e1773;"> <!-- inline css -->
+                <div class="col-12 col-sm-12 col-md-9 col-lg-9 icerigi-yatay-dikey-ortala" style="background-color: #2e1773;"> <!-- inline css -->
                     <input type="text" id="messageInput" placeholder="mesajınızı girin..." autocomplete="off">
                     <button type="button" id="mesajGonderButonu">Gönder</button>
                 </div>
@@ -63,14 +63,14 @@
             document.getElementById("messageInput").value = ""; //mesaj gönderdikten sonra input alanı temizlensin.
         };
 
-        mesajInputu.addEventListener('keyup', function(event) {
+        mesajInputu.addEventListener('keyup', function(event) { //yazarken enter tuşuna bastığında mesaj göndermesi için event listener.
             if(event.keyCode === 13) {
                 event.preventDefault();
                 mesajGonder();
             }
         });
 
-        mesajGonderButonu.addEventListener('click', () => {
+        mesajGonderButonu.addEventListener('click', () => { //mesaj gönderme butonuna tıklandığında da mesaj gönderilsin.
             mesajGonder();
         });
 
