--- a/public/custom.css
+++ b/public/custom.css
@@ -93,3 +93,50 @@ body
     text-overflow: ellipsis;
     white-space: nowrap;
 }
+/* ---------------------------------------------------------------------------------------------- */
+.login-form-container
+{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.login-form
+{
+    width: 500px;
+    height: 300px;
+    margin-left:10px;
+    margin-right:10px;
+}
+.login-form-baslik
+{
+    text-align: center;
+}
+.login-form-username
+{
+    width: 100%;
+    height: 35px;
+    margin-top:20px;
+    margin-bottom:20px;
+}
+.login-form-oda
+{
+    width: 100%;
+    height: 35px;
+    margin-bottom:20px;
+}
+.login-form-buton
+{
+    display: block;
+    margin:0 auto;
+    height: 35px;
+    border:none;
+    border-radius: 3px 3px 3px 3px;
+    background-color: #db8eea;
+    cursor: pointer;
+}
+.login-form-buton:hover
+{
+    background-color: rgb(243, 157, 181);
+}
+/* ---------------------------------------------------------------------------------------------- */
