--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="login-form-container">
-            <form class="login-form" action="login" method="post" autocomplete="off">
+            <form class="login-form" action="user/login" method="post" autocomplete="off">
                 <h3 class="login-form-baslik">Chat yapmaya başlamak için giriş yap!</h3>
                 <input class="login-form-username" type="text" name="kullaniciAdi" id="kullaniciAdi" placeholder="lütfen bir kullanıcı adı seçin.">
                 <select class="login-form-oda" name="oda">
